Created the projects section.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/work.css">
+    <link rel="stylesheet" href="css/projects.css">
 
 </head>
 <body ng-app="portfolio" ng-controller="portfolio_controller">
@@ -54,6 +55,14 @@
                 </div>
 
             </div>
+
+        </div>
+
+        <!--? Work experience section -->
+        <div class="projects">
+
+            <!--? Title -->
+            <p1>My Projects</p1>
 
         </div>
 
