Created the template for each project

--- a/index.html
+++ b/index.html
@@ -64,6 +64,26 @@
             <!--? Title -->
             <p1>My Projects</p1>
 
+            <div class="project">
+                <img src="" class="image">
+                <div class="description">
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos saepe, eos animi deleniti excepturi autem facilis eaque omnis alias enim quam sint iusto tenetur accusantium tempore illo quia? Sed, facilis.
+                    </p>
+                </div>
+                <div class="info">
+                    <div class="stack">
+                        <div class="language"></div>
+                        <div class="language"></div>
+                        <div class="language"></div>
+                    </div>
+                    <div class="links">
+                        <div class="link"></div>
+                        <div class="link"></div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
     </div>
