--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <!--? [ CSS REFERENCES ] -->
     <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/colors.css">
     <link rel="stylesheet" href="css/about_me.css">
+    <link rel="stylesheet" href="css/projects.css">
 
 </head>
 <body ng-app="portfolio" ng-controller="portfolio_controller">
