--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="css/about_me.css">
     <link rel="stylesheet" href="css/projects.css">
 
+    <!--? [ CSS DIRECTIVES ] -->
+    <link rel="stylesheet" href="js/directives/project_card/project_card.css">
+
 </head>
 <body ng-app="portfolio" ng-controller="portfolio_controller">
 
@@ -41,3 +44,9 @@
 <script src="js/app.js"></script>
 <script src="js/config.js"></script>
 <script src="js/controllers/portfolio_controller.js"></script>
+
+<!--? [ JS JSONS ] -->
+<script src="js/json/projects.js"></script>
+
+<!--? [ JS DIRECTIVES ] -->
+<script src="js/directives/project_card/project_card.js"></script>
