Sixth commit to try fixing github pages paths

--- a/js/directives/project_card/project_card.html
+++ b/js/directives/project_card/project_card.html
@@ -7,6 +7,6 @@
 </div>
 <div class="stack_wrapper">
     <div ng-repeat="tech in stack" class="stack_icon" ng-class="tech">
-        <img src="./icons/{{ tech }}.svg">
+        <img src="icons/{{ tech }}.svg">
     </div>
 </div>
